fix: hide nav bar desktop on mobile

--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.menu {
+    @apply hidden md:block;
+}
+
 .menu > ul {
     @apply flex gap-3 text-lg ;
 }
